# chip-8-desktop

./: Cargo.toml  README.md
src/: emulator.rs  keyboard.rs  main.rs  scale_pixels.wgsl  screen.rs  timers.rs
