[package]
authors = ["Stefano Ariotta sqrtstefano@gmail.com"]
name = "chip-8-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
chip-8-core = { path = "../chip-8-core" } #, features = ["legacy-opcodes"] }
#chip-8-core = { git = "https://github.com/st-ario/chip-8-core.git" } #, features = ["legacy-opcodes"] }
ggez = "0.8.1"
rand = { version = "0.8.5", features = ["small_rng"] }
spin_sleep = "1.1.1"
wgpu = "0.14.2"
